krunner: Load RunCommand.qml file from qrc rather than lookandfeel package

This way we do not load old or broken third party RunCommand.qml files in KRunner.
This also allows us to get rid of compatibility logic for old versions of this file.

BUG: 457174